src/scss/06_components/paragraphs/_list-of-links.scss
$-item-spacing: $spacing-triple;

.list-of-links {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: flex-start;
  width: 100%;

  @include breakpoint($breakpoint-s) {
    flex-direction: row;
    margin-left: -$-item-spacing;
    width: calc(100% + #{$-item-spacing});
  }
}

.list-of-links__item {
  margin-bottom: $spacing-double;
  position: relative;
  width: 100%;

  @include breakpoint($breakpoint-s) {
    margin-left: $-item-spacing;
    width: calc(50% - #{$-item-spacing});
  }

  @include breakpoint($breakpoint-m) {
    width: calc(25% - #{$-item-spacing});
  }

  // If there is 1,2 or 3 items inside the list of links:
  @include content_count(1, 2, 3) {
    @include breakpoint($breakpoint-s) {
      width: calc(50% - #{$-item-spacing});
    }

    @include breakpoint($breakpoint-m) {
      width: calc(33.3333% - #{$-item-spacing});
    }
  }

  .list-of-links__item__link {
    align-items: flex-start;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    justify-content: center;
    min-height: 90px;
    text-decoration: none;
    width: 100%;

    @include breakpoint($breakpoint-s) {
      display: block;
    }

    &:focus,
    &:hover {
      text-decoration: underline;

      &::after {
        transform: translateX($spacing-half);

        @media (prefers-reduced-motion) {
          transform: none;
        }
      }
    }

    &::before {
      content: '';
      display: block;
      inset: 0;
      position: absolute;
    }

    &::after {
      --icon-size: 1.5rem;

      @include pseudo-icon('arrow-right');
      @include hover-link-arrow-transition;
      content: '';
      display: block;
      flex-shrink: 0;
      margin-left: -$spacing-quarter;
      margin-top: $spacing-half;

      @include breakpoint($breakpoint-s) {
        --icon-size: 3rem;
        margin-left: -$spacing-half;
        margin-top: $spacing;
      }
    }

    &[data-is-external]::after {
      content: none;
      display: none;
    }

    .link__type {
      --icon-size: 1.5rem;
      display: block;
      height: var(--icon-size);
      margin-left: -$spacing-quarter;
      margin-top: $spacing-half;
      mask-size: var(--icon-size) var(--icon-size);
      width: var(--icon-size);

      @include breakpoint($breakpoint-s) {
        --icon-size: 3rem;
        margin-left: -$spacing-half;
        margin-top: $spacing;
      }
    }

    &:focus .link__type--external,
    &:hover .link__type--external {
      transform: translate($spacing-quarter, - $spacing-quarter);

      @media (prefers-reduced-motion) {
        transform: none;
      }
    }
  }

  .list-of-links__item__image {
    left: 0;
    position: absolute;
    top: 0;

    // Size of thumbnails on mobile
    width: 90px;

    @include breakpoint($breakpoint-s) {
      margin-bottom: $spacing;
      position: static;
      width: 100%;
    }

    img {
      @include image-defaults($width: 100%, $max-width: null);
      @include loading-image-background;
    }

    .image-placeholder {
      padding-bottom: 100%;
    }
  }

  .list-of-links__item__title {
    @include font('h4');
    margin: 0 0 0 (100px + $spacing);

    @include breakpoint($breakpoint-s) {
      margin: 0;
    }
  }
}

// Without image variants
.component--list-of-links-without-image,
.component--list-of-links-without-image-desc {
  .list-of-links__item {
    align-self: flex-start;
    min-height: 2rem;// Min-height is the same as the icon height.
    padding-bottom: 0;

    @include breakpoint($breakpoint-m) {
      width: calc(33.3333% - #{$-item-spacing});
    }

    // If there is 1,2 or 3 items inside the list of links:
    @include content_count(1, 2) {
      @include breakpoint($breakpoint-m) {
        width: calc(50% - #{$-item-spacing});
      }
    }

    .list-of-links__item__link {
      display: flex;
      flex-direction: row;
      justify-content: flex-start;
      min-height: auto;
      text-decoration: underline;

      .link__type,
      &::after {
        align-self: flex-start;
        margin-left: $spacing-half;
        margin-top: -2px; // Pull the arrow a bit higher to match the text line-height.

        @include breakpoint($breakpoint-s) {
          margin-top: -8px; // Pull the arrow a bit higher to match the text line-height.
        }
      }

      &:focus,
      &:hover {
        text-decoration: none;
      }
    }

    .list-of-links__item__title {
      display: flex;
      margin-left: 0;
    }

    .list-of-links__item__arrow {
      // Pull the arrow a bit higher to match the text line-height.
      margin: -2px 0 0 $spacing;

      @include breakpoint($breakpoint-s) {
        // Pull the arrow a bit higher to match the text line-height.
        margin-top: -8px;
      }

      .hel-icon {
        --icon-size: 2rem;

        @include breakpoint($breakpoint-s) {
          --icon-size: 3rem;
        }
      }
    }
  }
}

// Without image but with description variant
.component--list-of-links-without-image {
  .list-of-links__item {
    .list-of-links__item__desc {
      @include font('body');
      color: $color-black-60;
      margin-top: $spacing-half;

      @include breakpoint($breakpoint-l) {
        margin-top: $spacing-quarter;
      }
    }
  }
}

// Sidebar layout.
.has-sidebar .main-content {
  .list-of-links__item {
    padding-bottom: $spacing-and-half;

    @include breakpoint($breakpoint-l) {
      width: calc(50% - #{$-item-spacing});
    }
  }

  // Without image.
  .component--list-of-links-without-image {
    .list-of-links__item {
      @include breakpoint($breakpoint-l) {
        width: calc(50% - #{$-item-spacing});
      }
    }
  }
}

